--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.2
   expandable_text: ^2.3.0
   percent_indicator: ^4.0.0
+  cloud_firestore: ^3.1.13
 
 dev_dependencies:
   flutter_test:
