--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   percent_indicator: ^4.0.0
   cloud_firestore: ^3.1.13
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  simple_ripple_animation: ^0.0.3
 
 dev_dependencies:
   flutter_test:
