--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,6 +30,12 @@
     <string>Allow access to microphone</string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>Allow access to photo library</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Always allow access to current location</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Allow access to current location</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Allow access to current location when app in use.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
