--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^3.1.13
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   simple_ripple_animation: ^0.0.3
+  geolocator: ^8.2.0
 
 dev_dependencies:
   flutter_test:
