--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   simple_ripple_animation: ^0.0.3
   geolocator: ^8.2.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
