--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   simple_ripple_animation: ^0.0.3
   geolocator: ^8.2.0
   dio: ^4.0.6
+  rxdart: ^0.27.4
 
 dev_dependencies:
   flutter_test:
