--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,13 @@ dependencies:
   firebase_storage: ^10.2.9
   provider: ^6.0.2
   expandable_text: ^2.3.0
-  percent_indicator: ^4.0.0
+  percent_indicator: ^4.2.2
   cloud_firestore: ^3.1.13
-  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  modal_progress_hud_nsn: ^0.2.1
   simple_ripple_animation: ^0.0.3
-  geolocator: ^8.2.0
+  geolocator: ^9.0.1
   dio: ^4.0.6
+  firebase_messaging: ^12.0.1
 
 dev_dependencies:
   flutter_test:
