--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geolocator: ^9.0.1
   dio: ^4.0.6
   firebase_messaging: ^12.0.1
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
